[build-system]
requires = ['hatchling>=1.21', 'hatch-vcs>=0.4']
build-backend = 'hatchling.build'

[project]
name = 'autumn-framework'
description = 'Modern web-framework'
readme = 'README.md'
requires-python = '>=3.12'
dynamic = ['version']
license = {text = 'MIT'}
authors = [
    {name = 'Timofei Dimitrov', email = 'kayra.dist@gmail.com'}
]
dependencies = [
    'pydantic>=2.0',
    'orjson',
    'colorama',
    'click',
    'rich'
]

[project.urls]
Homepage = "https://autumn.de4oult.online"
Repository = "https://github.com/De4oult/Autumn"
Documentation = "https://autumn.de4oult.online/documentation"


[project.optional-dependencies]
dev = [
    'pytest>=8',
    'pytest-asyncio>=0.23',
    'mypy>=1.10',
]

[tool.hatch.version]
source = 'vcs'
tag-pattern = '^(?:v)?(?P<version>\d+\.\d+\.\d+.*)$'
fallback-version = '0.0.0'

[tool.hatch.version.raw-options]
version_scheme = 'no-guess-dev'
search_parent_directories = true

[tool.hatch.build.targets.wheel]
packages = ['source/autumn']

[tool.hatch.build.targets.sdist]
include = [
    '/source/autumn',
    '/README.md',
    '/pyproject.toml',
    '/tests'
]

[tool.pytest.ini_options]
testpaths = ['tests']
pythonpath = ['source']
